# people-logger

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml
migrations/2021-03-22-113941_create_count/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
