[package]
name = "people-logger"
version = "0.1.0"
authors = ["Akihito KIRISAKI <kirisaki@klara.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
