[package]
name = "people-logger"
version = "0.1.0"
authors = ["Akihito KIRISAKI <kirisaki@klara.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4", default_features = false, features = ["diesel_postgres_pool", "json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
rust_decimal = "1.10"
